# CG_Game_Engine

./: CMakeLists.txt  DataSampleNew.json  README.md
assets/shaders/ex29_light/: directional_light.frag
assets/shaders/ex30_light_array/: light_array.frag
assets/shaders/ex32_textured_material/: light_array.frag
assets/shaders/fshaders/: light_array.frag  shape1.frag  shape2.frag  shape3.frag  shape4.frag
assets/shaders/vshaders/: screen.vert
audio/: bullet.aac  door.aac
scenes/: game_scene.cpp  game_scene_utilities.cpp  gameover.cpp  level_transition.cpp  material_assets_2.h  menu.cpp  next_level.cpp  scene1.cpp  scene2.cpp  start.cpp
source/: debug.h  main.cpp  manager.cpp
source/common/: application.cpp  application.h  application_manager.cpp  application_manager.h  data-types.h  quaternion_utils.h  renderSystem.cpp  renderSystem.h  resource_manager.cpp  resource_manager.h  shader.cpp  shader.h
source/common/components/: MeshC.cpp  MeshC.h  RenderState.cpp  RenderState.h  box_collider.cpp  box_collider.h  camera-controller.h  camera.h  enemy_movement.h  light.cpp  light.h  material.cpp  material.h  material_component.h  mesh_component.cpp  mesh_component.h  righ_left_camera_controller.h  right_left_controller.h  script.h  transform.cpp  transform.h
source/common/ecs/: component.cpp  component.h  entity.cpp  entity.h  scene.cpp  scene.h  system.h
source/common/input/: keyboard.h  mouse.h
source/common/material/: material.cpp  material.h  material_assets.h
source/common/maze/: maze_generator.cpp  maze_generator.h
source/common/mesh/: common-vertex-attributes.hpp  common-vertex-types.hpp  mesh-utils.cpp  mesh-utils.hpp  mesh.h  vertex-attributes.h
source/common/serialization/: json_base.cpp  json_base.h  json_serializer.h  serializable.h
source/common/shader/: shader.cpp  shader.h
source/common/systems/: camera-controller.h  fly-controller.h  render_system.h  script_system.h
source/common/texture/: sampler.cpp  sampler.h  sampler_base.cpp  sampler_base.h  screenshot.cpp  screenshot.h  texture.cpp  texture.h
source/scripts/: shape_script.cpp
